# st7735

./: Cargo.toml  eva-title.data.pal  eva-title.raw  notes.txt  target.tga
.cargo/: config.toml
src/: main.rs
